RESOLVED FIXED301351
[CSS Zoom] Fix calc(em) for unzoomed properties
https://bugs.webkit.org/show_bug.cgi?id=301351
Summary [CSS Zoom] Fix calc(em) for unzoomed properties
Vitor Roriz
Reported 2025-10-23 08:07:54 PDT
[CSS Zoom] Fix calc(em) for unzoomed properties
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-23 08:08:02 PDT
Vitor Roriz
Comment 2 2025-10-23 08:15:58 PDT
EWS
Comment 3 2025-10-23 10:51:42 PDT
Committed 302041@main (b999bb0d07e1): <https://commits.webkit.org/302041@main> Reviewed commits have been landed. Closing PR #52885 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.